# CGRaytracer

./: .gitignore  CGRaytracer.cpp  CMakeLists.txt  Camera.h  Cylinder.h  Image.cpp  Image.h  LightSource.h  Material.h  Object.h  PointLight.h  Scene.h  Sphere.h  Triangle.h  Vector3D.cpp  Vector3D.h  checklist.md
scenes/: glass_spheres.json  glass_spheres_pathtraced.json  initial_scene.json  metal_spheres.json  mirror_image_pathtraced.json  refraction_test.json  scene.json  scene_generator.py  scene_generator_2.py  simple_pathtraced.json  sphere_binary_scene.json
scenes/animation/: initial_scene.json  scene_generator.py
scenes/textures/: MillenniumPuzzle.ppm  blue-wallpaper.ppm  red-wallpaper.ppm  white-wallpaper.ppm
src/: AABB.cpp  AABB.h  CGRaytracer.cpp  CGRaytracer.h  Camera.cpp  Camera.h  Colour.cpp  Colour.h  Cuboid.cpp  Cuboid.h  Cylinder.h  Image.cpp  Image.h  Interval.cpp  Interval.h  JSONParser.cpp  JSONParser.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  Object.cpp  Object.h  PinholeCamera.cpp  PinholeCamera.h  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.h  Utility.cpp  Utility.h  Vector2D.cpp  Vector2D.h  (+4 more)
src/cameras/: Camera.cpp  Camera.h  FiniteApertureCamera.cpp  FiniteApertureCamera.h  PinholeCamera.cpp  PinholeCamera.h
src/lights/: LightSource.cpp  LightSource.h  PointLight.cpp  PointLight.h  SphereLight.cpp  SphereLight.h
src/materials/: GlassMaterial.cpp  GlassMaterial.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  MetalMaterial.cpp  MetalMaterial.h
src/shapes/: Cuboid.h  Cylinder.cpp  Cylinder.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
test/: json_parser_test.cpp
